Fix credits image overlap; add meta tags to support different viewports (mobile);

--- a/credits/style.css
+++ b/credits/style.css
@@ -7,30 +7,33 @@ header {
   text-align: center;
 }
 body {
+  display: flex;
+  flex-direction: column;
   background: #1c1d31;
 }
 #logo {
-  position: absolute;
-  width: 25em;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  image-rendering: pixelated;
   image-rendering: crisp-edges;
+  height: 100px;
+}
+header {
+  display: flex;
+  flex-direction: column;
+  max-width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
 }
 header > #headerSubtitle {
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: "Minecraft";
-  margin: 0;
+  font-family: "Minecraft", sans-serif;
   color: #fbcc6c;
+  margin-top: 52px;
+  padding: 0 100px;
+  max-width: 1000px;
 }
 #credits {
   background: #1c1d31;
   color: white;
-  font-family: "Minecraft";
+  font-family: "Minecraft", sans-serif;
   text-align: center;
 }
 #credits > div {
@@ -44,7 +47,7 @@ header > #headerSubtitle {
 #noQuoteCredits {
   background: #1c1d31;
   color: white;
-  font-family: "Minecraft";
+  font-family: "Minecraft", sans-serif;
   text-align: center;
   margin: 20px;
 }
